--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "^4.4.1",
     "express": "^5.1.0",
     "joi": "^13.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pug": "^3.0.3"
   }
 }
